# unified-api

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yaml
config/: api_keys.yaml  config.yaml  credentials.yaml  endpoints.yaml  enrichers.yaml  projects.yaml  sources.yaml
docs/: api.md  architecture.md  caching.md  cli.md  configuration.md  connectors.md  deployment.md  testing.md
src/: config.rs  lib.rs  main.rs  scheduler.rs  state.rs
src/adapters/: env_secrets.rs  memory_cache.rs  mock_secrets.rs  mod.rs  process_connector.rs  process_enricher.rs  process_output.rs  scheduler.rs  ssh_connector.rs
src/adapters/http/: auth.rs  endpoints.rs  enrichers.rs  health.rs  hosts.rs  metrics.rs  mod.rs  openapi.rs  routes.rs  sources.rs  sync.rs
src/adapters/in/: mod.rs
src/adapters/in/http/: auth.rs  endpoints.rs  enrichers.rs  health.rs  hosts.rs  mod.rs  openapi.rs  projects.rs  routes.rs  sources.rs  sync.rs
src/adapters/in/scheduler/: mod.rs
src/api/: auth.rs  endpoints.rs  health.rs  mod.rs  openapi.rs  routes.rs  sources.rs
src/application/: credentials.rs  enrich.rs  mod.rs  projects.rs  sync.rs
src/domain/: api_key.rs  cache_entry.rs  credential.rs  dataset.rs  endpoint.rs  enricher.rs  mod.rs  project.rs  source.rs  static_inventory.rs  sync_mode.rs
src/ports/: cache.rs  connector.rs  enricher.rs  git.rs  mod.rs  output.rs  secrets.rs
test-connectors/: fake_enricher.py  fake_infra.py  fake_inventory.py  fake_slow.py
tests/: api_integration_test.rs  connector_test.rs  git_test.rs  remote_connector_test.rs  static_inventory_test.rs  sync_test.rs
