[package]
name = "unified-api"
version = "0.3.5"
edition = "2024"
description = "Infrastructure inventory aggregation and caching middleware"
license = "Apache-2.0"
repository = "https://github.com/OpusProjects/unified-api"
readme = "README.md"
# This is a deployed application, not a library — never publish to crates.io
publish = false

[dependencies]
axum = "0.8"
base64 = "0.22"          # Basic auth header for git-over-https credentials
dashmap = "6"
futures = "0.3"
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }
# Remote connector (federation): fetch datasets from other unified-api
# instances. rustls instead of openssl to keep the build self-contained.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
russh = "0.62.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"   # maintained drop-in fork of the deprecated serde_yaml
subtle = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# [dev-dependencies] = compiled only for tests, never shipped in the production binary
[dev-dependencies]
tempfile = "3"
tower = "0.5"            # to call the app as a service (no TCP)
http-body-util = "0.1"   # to read the body of responses
